made project title align correctly

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,16 +107,16 @@ nav {
 }
 
 .label {
-  padding: 1.5em 0;
+  padding: 1.5em 3em;
   width: 100%;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, .5);
   display: flex;
   flex-direction: column;
 }
 
 .project-title {
+  width: 230.44px;
   margin: auto;
-  padding: 0em 3em;
 }
 
 .label-content {
@@ -132,7 +132,6 @@ nav {
 
 .label-item {
   padding: 1em 3em;
-}
 
 
 @media (min-width: 768px) {
@@ -159,4 +158,5 @@ nav {
   .label-content {
     flex-direction: row;
   }
+}
 }
